fix: Changing AUTH_TOKEN specification

--- a/examples/web/index.html
+++ b/examples/web/index.html
@@ -221,11 +221,11 @@
               </button>
               <button onClick={() => setLog('')}>Clear Log</button>
             </div>
-            <div className="small">
-              Tip: When AUTH_TOKEN is enabled on the server, browsers cannot
+              <div className="small">
+              Tip: When EVENTS_AUTH_TOKEN is enabled on the server, browsers cannot
               send Authorization headers. Use a proxy to inject the header or
               temporarily disable auth for this demo.
-            </div>
+              </div>
             <div className="row">
               <textarea readOnly value={log}></textarea>
             </div>
